<resources>
    <string name="app_name">Devent</string>
    <string name="finished">Finished</string>
    <string name="upcoming">Upcoming</string>
    <string name="home">Home</string>
    <string name="search_for_event">Search for Event</string>
    <string name="hello_dicoding">Hello, Dicoding!</string>
    <string name="cover_event">Cover Event</string>
    <string name="upcoming_dicoding_events">Upcoming Dicoding Events</string>
    <string name="finished_dicoding_events">Finished Dicoding Events</string>
    <string name="register">Register</string>
    <string name="kuota">Kuota: %1$s</string>
    <string name="dilaksanakan_pada">Dilaksanakan pada %1$s</string>
    <string name="settings">Settings</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_preferences">User Preferences</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="enable_dark_mode_theme">Enable dark mode theme</string>
    <string name="daily_reminder">Daily Reminder</string>
</resources>