<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/tv_user_preferences"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_preferences"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sm_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_preferences" />

    <TextView
        android:id="@+id/tv_theme_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_dark_mode_theme"
        app:layout_constraintTop_toBottomOf="@id/sm_theme"
        android:textSize="12sp"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sm_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daily_reminder"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_theme_description" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_dark_mode_theme"
        app:layout_constraintTop_toBottomOf="@id/sm_notification"
        android:textSize="12sp"/>



</androidx.constraintlayout.widget.ConstraintLayout>