<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="16dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/hello_dicoding"/>

        <TextView
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:id="@+id/tv_upcoming_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_dicoding_events"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_upcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:overScrollMode="never"
            android:scrollbarSize="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_upcoming_title"
            app:layout_constraintVertical_bias="0" />

        <ProgressBar
            android:id="@+id/pb_upcoming"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="120dp"
            app:layout_constraintBottom_toBottomOf="@+id/rv_upcoming"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_upcoming_title" />

        <TextView
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:id="@+id/tv_finished_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/finished_dicoding_events"
            app:layout_constraintTop_toBottomOf="@id/rv_upcoming"
            />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_finished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:overScrollMode="never"
            android:scrollbarSize="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_finished_title"
            app:layout_constraintVertical_bias="0" />

        <ProgressBar
            android:id="@+id/pb_finish"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginVertical="120dp"

            android:layout_marginTop="24dp"
            android:layout_marginBottom="484dp"
            app:layout_constraintBottom_toBottomOf="@+id/rv_finished"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rv_finished" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
